@@ -3,6 +3,8 @@
 	* misc files: Tests pass on 1.9.
 	* test/gemutilities.rb: Added Object#send! stub for 1.8.
 	* test/test_open_uri.rb: Require gem_open_uri.rb to avoid warnings.
+	* lib/rubygems/commands/sources_command.rb: Clarify `gem sources -c`
+	and what `gem sources` does.  Patch by Hugh Sasse.
 
 2007-09-19  Eric Hodel  <drbrain@segment7.net>
 
